--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-input-mask": "^3.0.0-alpha.2",
     "react-scripts": "4.0.3",
     "react-simple-cep-mask": "^0.1.4",
+    "react-toastify": "^8.1.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
